<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.prathameshmore.weightonotherworld.About"
    tools:showIn="@layout/activity_about"
    android:background="@drawable/galaxy">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/small_margin"
                android:src="@drawable/ic"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="24sp"
                android:text="@string/app_name"
                android:fontFamily="casual"
                android:typeface="normal"
                android:textColor="@color/white_text"
                tools:ignore="UnusedAttribute"
                android:textStyle="normal|bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/app_ver"
                android:fontFamily="casual"
                android:typeface="normal"
                android:textColor="@color/white_text"
                tools:ignore="UnusedAttribute"
                android:textStyle="normal|bold"
                android:layout_margin="@dimen/small_margin"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                android:text="@string/me"
                android:fontFamily="casual"
                android:typeface="normal"
                android:textColor="@color/white_text"
                tools:ignore="UnusedAttribute"
                android:textStyle="normal|bold"
                android:layout_margin="@dimen/small_margin"
                />
            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button"
                android:text="@string/facebook"
                android:textColor="@color/white_text"
                android:backgroundTint="#114df3"
                android:background="@drawable/curve"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="casual"
                android:textSize="22sp"
                android:textStyle="normal|bold"
                tools:ignore="UnusedAttribute" />

            <Button
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button"
                android:text="@string/share"
                android:textColor="@color/white_text"
                android:backgroundTint="@color/colorPrimary"
                android:background="@drawable/curve"
                android:layout_marginTop="@dimen/small_margin"
                android:fontFamily="casual"
                android:textSize="22sp"
                android:textStyle="normal|bold"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>





    </ScrollView>
</RelativeLayout>
